src/styles/app.scss
@import '_reset';

html, body {
  font-size: 14px;
  font-family: Helvetica, Arial, 'Sans serif';
  color: #555;
  background: #283344;
  height: 100%;
  width: 100%;
}

.hide {
  display: none !important;
}

.container {
  width: 100%;
  margin: 0;
  padding: 25px;
  box-sizing: border-box;
}

.header {
  height: 50px;
  background: #121c2b;
  line-height: 50px;
  font-size: 30px;
  text-align: center;
}


.memory-game-table {
  width: 100%;
  height: auto;
  -webkit-tap-highlight-color: transparent;
}

.memory-game-cell {
  width: 20vw;
  height: 20vw;
  
  color: #fff;
  text-align: center;
  vertical-align: middle;
  font-size: 30px;
}


.card {
  width: 100%;
  height: 100%;
  // padding: 5px;
  text-align: center;
  display: block;
  perspective: 500px;
  position: relative;
  cursor: pointer;
  z-index: 50; 
  -webkit-tap-highlight-color: transparent;
  .inside {
    width: 100%;
    height: 100%;
    display: block;
    transform-style: preserve-3d;
    transition: .4s ease-in-out;
    background: #38485f;

    &.picked, &.matched {
      transform: rotateY(180deg);
    }
    &.matched {
      background: #0d1017;
    }
  }

  .front, .back {
    border: 3px solid #283344;
    backface-visibility: hidden;
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    padding: 20px;
    display: flex;
    align-items: center;
    justify-content: center;

    img {
      max-width: 100%;
      display: block;
      margin: 0 auto;
      max-height: 100%;
    }
  }
  .front {
    transform: rotateY(-180deg);
  }
  .back{
    // for firefox
    transform: rotateY(0deg);
  }
}

.modalWrapper {
  background: rgba(0, 0, 0, 0.8);
  position: absolute;
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
  z-index: 100;
  display: flex;
  align-items: center;
  justify-content: center;
}

.modal {
  background: #1E2633;
  border: 1px solid #979797;
  width: 80%;
  padding: 20px;
  color: #fff;
  border-radius: 5px;

  &__header {
    border-bottom: 1px solid #fff;
    font-size: 20px;
    font-weight: bold;
    padding: 10px 0;
    margin-bottom: 10px;
  }

  &__body {
    font-size: 16px;
    p {
      margin-bottom: 10px;
    }
  }

  &__footer {
    text-align: center;
    margin-top: 30px;
  }
}

.startGame {
  background: #0D1520;
  width: 120px;
  text-align: center;
  height: 45px;
  line-height: 45px;
  border: 1px solid #979797;
  border-radius: 5px;
  color: #fff;
  padding: 0;
  font-size: 18px;
  &:focus {
    outline: none;
  }
}

